no hide header when navigation is open rules

--- a/components.scss
+++ b/components.scss
@@ -374,6 +374,10 @@
                 @include opacity($component-header-no-1-mobile-nav-open-overlay-opacity);
             }
 
+            &.#{$component-header-no-1-fixed-hide-class} {
+                @include transform(none);
+            }
+
             .header-nav {
                 right: 0;
             }
