set default flag for component-header-no-1-mobile-nav-element-color variable

--- a/config.scss
+++ b/config.scss
@@ -83,7 +83,7 @@ $component-header-no-1-mobile-nav-background: $document-background-color !defaul
 
 //Elements
 $component-header-no-1-mobile-nav-element-padding: 15px 20px !default;
-$component-header-no-1-mobile-nav-element-color: $component-header-no-1-nav-element-color;
+$component-header-no-1-mobile-nav-element-color: $component-header-no-1-nav-element-color !default;
 
 //Sub nav
 $component-header-no-1-mobile-sub-nav-background: $primary-color !default;
