--- a/components.scss
+++ b/components.scss
@@ -182,6 +182,7 @@
             list-style: none;
 
             @media(max-width: get-screen-size($component-header-no-1-mobile-screen-size-prefix, max)) {
+                overflow: hidden;
                 float: none;
                 height: auto;
             }
